add register system

--- a/.example.config.yaml
+++ b/.example.config.yaml
@@ -3,6 +3,12 @@
 # Токен бесрочный обновлять не нужно! Если нужно будет отозвать, задйите в настройки! 
 token: "vk1.a.XXXXXX"
 
+# 
+# Необязательно можно указать при инсталяции
+#
+phone: +79XXXX
+ppasword: XXXXX
+
 # Идентификатор группы (в ссылке на группу https://vk.com/clubXXXXX)
 group_id: 222485128
 
