--- a/.example.config.yaml
+++ b/.example.config.yaml
@@ -1,6 +1,7 @@
 # https://vkhost.github.io/ 
 # Kate Mobile, далее скопировать токен сюда из адресной строки
 # Токен бесрочный обновлять не нужно! Если нужно будет отозвать, задйите в настройки! 
+# Вместо токена можно по телефону и паролю
 token: "vk1.a.XXXXXX"
 
 # 
@@ -12,7 +13,7 @@ ppasword: XXXXX
 # Идентификатор группы (в ссылке на группу https://vk.com/clubXXXXX)
 group_id: 222485128
 
-# Сообщение при отправке (если не нужно, оставить пусты)
+# Сообщение при отправке (если не нужно, оставить пустым)
 message: ""
 
 # Время отправки
